Fix bug with jumping page

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -61,7 +61,7 @@ menuFlex()
           display block
           clear both
           margin 10px 15px 10px 15px
-//Styles for the all of page subpages
+//Styles for all subpages
 html, body
   font-family: 'Montserrat', sans-serif;
   margin 0
@@ -70,6 +70,8 @@ html, body
   height 100%
   background darkColor
   color #eee
+html
+  overflow-y scroll
 h1,h2,h3,h4,h5,h6
   font-family serif
   font-weight bold
